--- a/BlazorWasm.MemoryCardGame/BlazorWasm.MemoryCardGame.csproj
+++ b/BlazorWasm.MemoryCardGame/BlazorWasm.MemoryCardGame.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
+  <BlazorEnableCompression>false</BlazorEnableCompression>
+  <RootNamespace>MemoryCardGame</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
